# nfl-raw

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  HANDOFF.md  pyproject.toml
docs/: model-reporting.md  raw-to-data-migration-playbook.md
nfl/raw/: README.md
nfl/raw/1999/: 1999_01_ARI_PHI.json  1999_01_BAL_STL.json  1999_01_BUF_IND.json  1999_01_CAR_NO.json  1999_01_CIN_TEN.json  1999_01_DAL_WAS.json  1999_01_DET_SEA.json  1999_01_KC_CHI.json  1999_01_MIA_DEN.json  1999_01_MIN_ATL.json  1999_01_NE_NYJ.json  1999_01_NYG_TB.json  1999_01_OAK_GB.json  1999_01_PIT_CLE.json  1999_01_SF_JAX.json  1999_02_ARI_MIA.json  1999_02_ATL_DAL.json  1999_02_CLE_TEN.json  1999_02_DEN_KC.json  1999_02_GB_DET.json  1999_02_IND_NE.json  1999_02_JAX_CAR.json  1999_02_NO_SF.json  1999_02_NYJ_BUF.json  1999_02_OAK_MIN.json  1999_02_PIT_BAL.json  1999_02_SD_CIN.json  1999_02_SEA_CHI.json  1999_02_TB_PHI.json  1999_02_WAS_NYG.json  1999_03_ATL_STL.json  1999_03_CHI_OAK.json  1999_03_CIN_CAR.json  1999_03_CLE_BAL.json  1999_03_DEN_TB.json  1999_03_DET_KC.json  1999_03_IND_SD.json  1999_03_MIN_GB.json  1999_03_NYG_NE.json  1999_03_PHI_BUF.json  (+219 more)
python/: extract_2025_games.py  extract_nfl_games.py  pull_2025.py  raw_fetcher.py  scrape_nfl_json.py
python/native_pbp/: __init__.py  build.py  description.py  features.py  labels.py  parity.py  parse.py  stat_ids.py
tests/: test_constants.py  test_features.py  test_fetcher.py  test_figures_report.py  test_ingest.py  test_labels.py  test_metrics.py  test_pipeline.py  test_trainer_smoke.py  test_validate.py
tests/native_pbp/: test_build.py  test_native_ingest.py  test_native_training.py  test_parity.py  test_parse.py  test_stat_ids.py
tools/hooks/: check_commit_msg.py
(+7032 files in other folders)
