[project]
name = "nfl-raw-pipeline"
version = "0.1.0"
description = "Scrapes NFL Shield-API game JSON into a committed raw library (sibling of nfl-data, which owns modeling)."
requires-python = ">=3.9"
dependencies = [
    "sportsdataverse>=0.0.59",
    "polars>=1.0,<2.0",
]

# NOTE: sportsdataverse>=0.0.59 supplies the NFL Shield API wrappers the raw fetcher
# imports (sportsdataverse.nfl.nfl_api / nfl_games). It resolves from PyPI so a clean
# `uv sync` works without a sibling checkout. For local co-development against an
# unreleased sdv-py, run `uv pip install -e ../../sdv-py` after `uv sync` (do not add a
# path source to [tool.uv.sources] — it would break any environment lacking the sibling).

[dependency-groups]
dev = [
    "pytest>=8.0",
]
# NOTE: modeling-only deps (xgboost, numpy) and the `figures` group (plotnine,
# scikit-misc) were dropped in the SP3 decommission — modeling now lives in nfl-data.

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["python*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
